--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "camelcase-keys": "^4.1.0",
     "coffee-loader": "^0.8.0",
     "coffee-script": "^1.12.7",
     "compression-webpack-plugin": "^1.0.0",
     "css-loader": "^0.28.5",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "glamor": "^2.20.40",
     "glob": "^7.1.2",
     "js-yaml": "^3.9.1",
     "node-sass": "^4.5.3",
@@ -27,9 +29,11 @@
     "rails-erb-loader": "^5.1.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-table": "^6.5.3",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "titleize": "^1.0.0",
     "webpack": "^3.5.5",
     "webpack-manifest-plugin": "^1.3.1",
     "webpack-merge": "^4.1.0"
